# financial-anomaly-detector

./: .gitignore  README.md  anomaly_detector.py  dashboard_builder.py  demo_companies.json  make_demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
github/workflows/.github/workflows/: build-demo.yml
templates/: dashboard.html
tests/: conftest.py  test_dashboard_builder.py  test_detection.py  test_explanations.py  test_features.py
