[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "financial-anomaly-detector"
version = "0.1.0"
description = "LLM-powered anomaly detection on financial time series"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "yfinance>=0.2.40",
    "anthropic>=0.25.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

[project.scripts]
anomaly-detect = "anomaly_detector:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/financial-anomaly-detector"
Demo     = "https://YOUR_USERNAME.github.io/financial-anomaly-detector"

[tool.ruff]
line-length = 100
target-version = "py310"
